--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -4,6 +4,28 @@
 
 <hr>
 
+<%= link_to 'New Property', new_property_path , class:"btn btn-success" %>
+<%= link_to "Export as CSV", "properties.csv", class: "btn btn-warning pull-right" %>
+
+<h4>Import Properties</h4>
+
+<%= form_tag import_properties_path, multipart:true do %>
+
+    <div class="input-group">
+      <label class="input-group-btn">
+      <span class="btn btn-primary">
+          Browse&hellip; <input type="file" name="file" style="display: none;" multiple>
+      </span>
+      </label>
+      <input type="text" class="form-control" readonly>
+    </div>
+
+    <br>
+    <%= submit_tag "Upload", class: "btn btn-info btn-sm"  %>
+<% end %>
+
+<hr>
+
 <table class="table table-striped table-responsive">
   <thead>
     <tr>
@@ -36,26 +58,4 @@
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Property', new_property_path , class:"btn btn-success" %>
-
-<h3>Import Properties</h3>
-
-<%= form_tag import_properties_path, multipart:true do %>
-
-    <div class="input-group">
-      <label class="input-group-btn">
-      <span class="btn btn-primary">
-          Browse&hellip; <input type="file" name="file" style="display: none;" multiple>
-      </span>
-      </label>
-      <input type="text" class="form-control" readonly>
-    </div>
-
-    <br>
-  <%= submit_tag "Upload", class: "btn btn-info"  %>
-<% end %>
-
-<h3>Export Properties</h3>
-<%= link_to "Export", "properties.csv", class: "btn btn-warning" %>
